Properly fix color-picking-after-ctrl-z bug

The ShortcutOverride event is always followed by KeyPress
event so there is no need to process both of them.

BUG:329018